--- a/src/components/HeroBanner/style.css
+++ b/src/components/HeroBanner/style.css
@@ -1,10 +1,4 @@
-video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-}
+
 
 .hero-container {
     
@@ -18,7 +12,7 @@ video {
 }
 
 .hero-heading {
-    margin-top: 100px;
+    padding-top: 100px;
     display: flex;
     flex-direction: row;
     align-items: center;
