--- a/src/views/About/style.css
+++ b/src/views/About/style.css
@@ -1,3 +1,10 @@
 .about-container {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-container > img {
+    height: 100%;
+    justify-self: center;
 }
