--- a/src/components/Navlinks/style.css
+++ b/src/components/Navlinks/style.css
@@ -50,10 +50,15 @@
 
     .hamburger {
         display: inline-block;
+        z-index: 200;
     }
 
     .navbar {
         justify-content: center;
     }
+
+    .sidebar-container {
+        display: flex;
+    } 
   }
 
