--- a/src/views/About/style.css
+++ b/src/views/About/style.css
@@ -1,10 +1,21 @@
 .about-container {
     height: 100vh;
+    padding-top: 100px;
+    width: auto;
     display: flex;
     flex-direction: column;
+}
+
+.about-container > h1 {
+    margin-left: 25%;
 }
 
 .about-container > img {
     height: 100%;
     justify-self: center;
+}
+
+.about-container > p {
+    width: 50%;
+    align-self: center;
 }
